5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4057/executions/1706_3058.log
== SUBMITION (2019-04-29 19:04:58) 
-- CODE:
a = float(input("Qual a area: "))

if a >= o and a >=100 :
	valor = (a*2)+100
	print(round(valor, 2))
elif a > 100 and a >= 2500:
	valor = (a*1.80)+ 150
	print(round(valor, 2))
elif a > 2500 and a <= 10000:
	valor = (a*1.50)+200
	print(round(valor, 2))
elif a > 10000 :
	valor = (a*1.20)+250
	print(round(valor, 2))
-- EXECUTION TIME:
0.233088
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1706/3058/main.py", line 3, in <module>
    if a >= o and a >=100 :
NameError: name 'o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:05:27) 
-- CODE:
a = int(input("Qual a area: "))

if a >= o and a >=100 :
	valor = (a*2)+100
	print(round(valor, 2))
elif a > 100 and a >= 2500:
	valor = (a*1.80)+ 150
	print(round(valor, 2))
elif a > 2500 and a <= 10000:
	valor = (a*1.50)+200
	print(round(valor, 2))
elif a > 10000 :
	valor = (a*1.20)+250
	print(round(valor, 2))
-- EXECUTION TIME:
0.238313
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1706/3058/main.py", line 3, in <module>
    if a >= o and a >=100 :
NameError: name 'o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:06:31) 
-- CODE:
a = int(input("Qual a area: "))

if a >= o and a <=100 :
	valor = (a*2)+100
	print(round(valor, 2))
elif a > 100 and a <= 2500:
	valor = (a*1.80)+ 150
	print(round(valor, 2))
elif a > 2500 and a <= 10000:
	valor = (a*1.50)+200
	print(round(valor, 2))
elif a > 10000 :
	valor = (a*1.20)+250
	print(round(valor, 2))
-- EXECUTION TIME:
0.167739
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1706/3058/main.py", line 3, in <module>
    if a >= o and a <=100 :
NameError: name 'o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:06:34) 
-- CODE:
a = int(input("Qual a area: "))

if a >= o and a <=100 :
	valor = (a*2)+100
	print(round(valor, 2))
elif a > 100 and a <= 2500:
	valor = (a*1.80)+ 150
	print(round(valor, 2))
elif a > 2500 and a <= 10000:
	valor = (a*1.50)+200
	print(round(valor, 2))
elif a > 10000 :
	valor = (a*1.20)+250
	print(round(valor, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if a >= o and a <=100 :
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:06:47) 
-- CODE:
a = int(input("Qual a area: "))

if a >= 0 and a <=100 :
	valor = (a*2)+100
	print(round(valor, 2))
elif a > 100 and a <= 2500:
	valor = (a*1.80)+ 150
	print(round(valor, 2))
elif a > 2500 and a <= 10000:
	valor = (a*1.50)+200
	print(round(valor, 2))
elif a > 10000 :
	valor = (a*1.20)+250
	print(round(valor, 2))
-- EXECUTION TIME:
0.14048
-- TEST CASE 1:
---- input:
125
---- correct output:
375.0
---- user output:
375.0
-- TEST CASE 2:
---- input:
15000
---- correct output:
18250.0
---- user output:
18250.0
-- TEST CASE 3:
---- input:
81
---- correct output:
262.0
---- user output:
262
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
